# SimpleLogger

./: CMakeLists.txt
SimpleLogger/: simplelogger.cpp  simplelogger.h
test/: test.cpp
